--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,5 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
-name: Swift
+# Swift Package Build Workflow for Plasma Project
+name: Swift Plasma Package Build
 
 on:
   push:
@@ -11,12 +9,45 @@ on:
 
 jobs:
   build:
-
-    runs-on: macos-latest
-
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
+    
+    runs-on: ${{ matrix.os }}
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    
+    - name: Setup Swift
+      uses: swift-actions/setup-swift@v2
+      with:
+        swift-version: "5.9.0"
+    
+    # Navigate to the plasma directory and verify Package.swift
+    - name: Verify Plasma Package
+      run: |
+        cd plasma
+        if [ ! -f Package.swift ]; then
+          echo "Error: Package.swift not found in plasma directory"
+          exit 1
+        fi
+        pwd
+        ls
+    
+    # Build the Plasma package with verbose output
+    - name: Build Plasma Package
+      run: |
+        cd plasma
+        swift build -v
+    
+    # Run tests with verbose output
+    - name: Run Tests
+      run: |
+        cd plasma
+        swift test -v
+    
+    # Optional: Generate code coverage
+    - name: Generate Code Coverage
+      run: |
+        cd plasma
+        swift test --enable-code-coverage -v
